Bug 336376 - Folder view disappears when a second panel is added
Summary: Folder view disappears when a second panel is added
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Kubuntu Linux
: NOR major
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-18 07:46 UTC by Philipp Stefan
Modified: 2014-06-20 13:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The desktop in folder mode without additional panel (478.35 KB, image/png)
2014-06-18 07:46 UTC, Philipp Stefan
Details
Folder mode and additional panel (300.37 KB, image/png)
2014-06-18 07:47 UTC, Philipp Stefan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Stefan 2014-06-18 07:46:20 UTC
Created attachment 87247 [details]
The desktop in folder mode without additional panel

When I add a second panel with the desktop in "Folder" mode, then the content of the folder won't be displayed.

Steps to reproduce:
1. Set the desktop to "Folder" mode
2. Select a folder with content
3. Add another panel
4. The content of the folder should not be displayed anymore
5. Remove the new panel again
6. The content of the folder should be displayed again
Comment 1 Philipp Stefan 2014-06-18 07:47:08 UTC
Created attachment 87248 [details]
Folder mode and additional panel

As one can see, when the second panel is added then the content of the folder stops being displayed.
Comment 2 Marco Martin 2014-06-18 14:57:52 UTC
can't reproduce.

does moving the panel around make it reappear?

it may be availableScreenSpace not being calculated correctly
Comment 3 Eike Hein 2014-06-18 14:58:57 UTC
Can reproduce, am investigating right now.
Comment 4 Eike Hein 2014-06-18 17:33:22 UTC
Hmm, unfortunately I could only reproduce it once. Basically, what happened is that the new panel appeared on the left screen edge, the icons disappeared and a vertical scrollbar appeared on the desktop with about 1.5cm of scroll range on a 24" 16:10 monitor.

We need to identify a set of circumstances to reproduce it reliably.
Comment 5 Philipp Stefan 2014-06-19 13:58:34 UTC
I sadly can't reproduce it reliably either. The only consistent thing is that the panel appears always on the left screen edge for me, and when I move it to the top the Folder view disappears. 
However, when I jolt the panel around without letting go of the "Screen Edge" button then it will eventually appear again.
Comment 6 Eike Hein 2014-06-19 18:11:52 UTC
> [18:27] <bshah> Sho_: hello!
> [18:30] <Sho_> bshah: hey
> [18:30] <bshah> Sho_: this is about bug 336376
> [18:30] <bugbot> KDE bug 336376 in plasmashell (Folder) "Folder view disappears when a second panel is added" [Major,Confirmed: ] http://bugs.kde.org/336376
> [18:31] <bshah> I have (maybe) steps to reproduce..
> [18:31] <Sho_> neat
> [18:31] <Sho_> do tell?
> [18:31] <bshah> after startup it happens only once..
> [18:31] <bshah> but if you change edge of desktop toolbox it will appear again..
> [18:31] <bshah> can you try?
> [18:32] <madeti> Shaan7: ksinny: updated rr
> [18:33] <bshah> Sho_: I am doing this from morning and I am sure that this is steps to reproduce that.. :p

Tried it, but doesn't work to reproduce here ... anyone else?
Comment 7 Bhushan Shah 2014-06-20 06:47:16 UTC
I added some qDebugs and noticed that availableScreenRect is QRect(1279,0 1x771) when this happens and this does not make any sense.

Any more debug output I can provide?
Comment 8 Bhushan Shah 2014-06-20 13:22:20 UTC
Git commit e11e9c7c6c1836c28b455014ae93e10bb61af540 by Bhushan Shah.
Committed on 20/06/2014 at 14:46.
Pushed by bshah into branch 'master'.

Set alignment of the panel before setting the thickness

if we will not set it panel geometry will end up being wrong and hence availableScreenRect
This fixes plasmoids and icons being disappeared when adding panels.
REVIEW: 118847

M  +1    -2    shell/panelview.cpp

http://commits.kde.org/plasma-workspace/e11e9c7c6c1836c28b455014ae93e10bb61af540