Set alignment of the panel before setting the thickness

if we will not set it panel geometry will end up being wrong and hence availableScreenRect
This fixes plasmoids and icons being disappeared when adding panels.

BUG: 336376
REVIEW: 118847